tests/baselines/reference/asyncGenerators.classMethod.18.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.18.es6.ts(3,16): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.18.es6.ts(3,16): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.18.es6.ts (2 errors) ====
    class C {
        async * f() {
            var x: yield;
                   ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                   ~~~~~
!!! error TS2304: Cannot find name 'yield'.
        }
    }